--- a/lawwa-web-revised/gallery.html
+++ b/lawwa-web-revised/gallery.html
@@ -169,53 +169,192 @@
                             <span class="icon_plus"></span>
                           </a>
                         </div>
+                        <div class="gf-item set-bg academy" data-setbg="img/lawwa-img/Media/academy/6.JPG">
+                          <a href="img/lawwa-img/Media/academy/6.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item large-small-height set-bg academy" data-setbg="img/lawwa-img/Media/academy/7.JPG">
+                          <a href="img/lawwa-img/Media/academy/7.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item small-height set-bg academy" data-setbg="img/lawwa-img/Media/academy/8.JPG">
+                          <a href="img/lawwa-img/Media/academy/8.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div><div class="gf-item set-bg academy" data-setbg="img/lawwa-img/Media/academy/9.JPG">
+                          <a href="img/lawwa-img/Media/academy/9.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item large-small-height set-bg academy" data-setbg="img/lawwa-img/Media/academy/10.JPG">
+                          <a href="img/lawwa-img/Media/academy/10.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item small-height set-bg academy" data-setbg="img/lawwa-img/Media/academy/11.JPG">
+                          <a href="img/lawwa-img/Media/academy/11.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item set-bg academy" data-setbg="img/lawwa-img/Media/academy/12.JPG">
+                          <a href="img/lawwa-img/Media/academy/12.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item large-small-height set-bg academy" data-setbg="img/lawwa-img/Media/academy/13.JPG">
+                          <a href="img/lawwa-img/Media/academy/13.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item small-height set-bg academy" data-setbg="img/lawwa-img/Media/academy/14.JPG">
+                          <a href="img/lawwa-img/Media/academy/14.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item set-bg academy" data-setbg="img/lawwa-img/Media/academy/15.JPG">
+                          <a href="img/lawwa-img/Media/academy/15.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
                         <!-- End Academy -->
                         <!-- Recruitment -->
-                        <div class="gf-item set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/1.JPG">
+                        <div class="gf-item large-small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/1.JPG">
                             <a href="img/lawwa-img/Media/recruitment/1.JPG" class="gf-icon image-popup">
                               <span class="icon_plus"></span>
                             </a>
                         </div>
-                        <div class="gf-item large-small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/2.JPG">
+                        <div class="gf-item small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/2.JPG">
                           <a href="img/lawwa-img/Media/recruitment/2.JPG" class="gf-icon image-popup">
                             <span class="icon_plus"></span>
                           </a>
                         </div>
-                        <div class="gf-item small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/3.JPG">
+                        <div class="gf-item set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/3.JPG">
                           <a href="img/lawwa-img/Media/recruitment/3.JPG" class="gf-icon image-popup">
                             <span class="icon_plus"></span>
                           </a>
                         </div>
-                        <div class="gf-item set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/4.JPG">
+                        <div class="gf-item large-small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/4.JPG">
                           <a href="img/lawwa-img/Media/recruitment/4.JPG" class="gf-icon image-popup">
                             <span class="icon_plus"></span>
                           </a>
                         </div>
-                        <div class="gf-item large-small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/5.JPG">
+                        <div class="gf-item small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/5.JPG">
                           <a href="img/lawwa-img/Media/recruitment/5.JPG" class="gf-icon image-popup">
                             <span class="icon_plus"></span>
                           </a>
                         </div>
+                        <div class="gf-item set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/6.JPG">
+                          <a href="img/lawwa-img/Media/recruitment/6.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item large-small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/7.JPG">
+                          <a href="img/lawwa-img/Media/recruitment/7.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/8.JPG">
+                          <a href="img/lawwa-img/Media/recruitment/8.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/9.JPG">
+                          <a href="img/lawwa-img/Media/recruitment/9.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item large-small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/10.JPG">
+                          <a href="img/lawwa-img/Media/recruitment/10.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/11.JPG">
+                          <a href="img/lawwa-img/Media/recruitment/11.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/12.JPG">
+                          <a href="img/lawwa-img/Media/recruitment/12.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item large-small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/13.JPG">
+                          <a href="img/lawwa-img/Media/recruitment/13.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <div class="gf-item small-height set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/14.JPG">
+                          <a href="img/lawwa-img/Media/recruitment/14.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div>
+                        <!-- <div class="gf-item set-bg recruitment" data-setbg="img/lawwa-img/Media/recruitment/15.JPG">
+                          <a href="img/lawwa-img/Media/recruitment/15.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span>
+                          </a>
+                        </div> -->
                         <!-- End Recruitment -->
                         <!-- PBT -->
-                        <div class="gf-item small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/1.JPG">
+                        <div class="gf-item large-small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/1.JPG">
                             <a href="img/lawwa-img/Media/pbt/1.JPG" class="gf-icon image-popup"><span
                                     class="icon_plus"></span></a>
                         </div>
-                        <div class="gf-item set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/2.JPG">
+                        <div class="gf-item small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/2.JPG">
                           <a href="img/lawwa-img/Media/pbt/2.JPG" class="gf-icon image-popup">
                             <span class="icon_plus"></span></a>
                         </div>
-                        <div class="gf-item large-small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/3.JPG">
+                        <div class="gf-item set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/3.JPG">
                           <a href="img/lawwa-img/Media/pbt/3.JPG" class="gf-icon image-popup">
                             <span class="icon_plus"></span></a>
                         </div>
-                        <div class="gf-item small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/4.JPG">
+                        <div class="gf-item large-small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/4.JPG">
                           <a href="img/lawwa-img/Media/pbt/4.JPG" class="gf-icon image-popup">
                             <span class="icon_plus"></span></a>
                         </div>
-                        <div class="gf-item set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/5.JPG">
+                        <div class="gf-item small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/5.JPG">
                           <a href="img/lawwa-img/Media/pbt/5.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span></a>
+                        </div>
+                        <div class="gf-item set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/6.JPG">
+                          <a href="img/lawwa-img/Media/pbt/6.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span></a>
+                        </div>
+                        <div class="gf-item large-small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/7.JPG">
+                          <a href="img/lawwa-img/Media/pbt/7.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span></a>
+                        </div>
+                        <div class="gf-item small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/8.JPG">
+                          <a href="img/lawwa-img/Media/pbt/8.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span></a>
+                        </div>
+                        <div class="gf-item set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/9.JPG">
+                          <a href="img/lawwa-img/Media/pbt/9.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span></a>
+                        </div>
+                        <div class="gf-item large-small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/10.JPG">
+                          <a href="img/lawwa-img/Media/pbt/10.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span></a>
+                        </div>
+                        <div class="gf-item small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/11.JPG">
+                          <a href="img/lawwa-img/Media/pbt/11.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span></a>
+                        </div>
+                        <div class="gf-item set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/12.JPG">
+                          <a href="img/lawwa-img/Media/pbt/12.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span></a>
+                        </div>
+                        <div class="gf-item large-small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/13.JPG">
+                          <a href="img/lawwa-img/Media/pbt/13.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span></a>
+                        </div>
+                        <div class="gf-item small-height set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/14.JPG">
+                          <a href="img/lawwa-img/Media/pbt/14.JPG" class="gf-icon image-popup">
+                            <span class="icon_plus"></span></a>
+                        </div>
+                        <div class="gf-item set-bg pbt" data-setbg="img/lawwa-img/Media/pbt/15.JPG">
+                          <a href="img/lawwa-img/Media/pbt/15.JPG" class="gf-icon image-popup">
                             <span class="icon_plus"></span></a>
                         </div>
                         <!-- End PBT -->
