--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -575,7 +575,7 @@
               <img src="img/lawwa-img/index/our pbt.JPG" alt="" />
               <h3 class="lawwa-blue" style="color: rgba(42,56,143,1);">Our PBT</h3>
               <p>
-                Our Personal Beauty Therapist are 1 of the best therapist. They are groomed and certified. If you are interested feel free to sign up as our Beauty Therapist. Be part of Lawwa.Asia now !
+                Our Personal Beauty Therapist are one of the best therapist. They are groomed and certified. If you are interested feel free to sign up as our Beauty Therapist. Be part of Lawwa.Asia now !
               </p>
               <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank" class="cust-lawwa-gradient">JOIN NOW</a>
             </div>
