mobile view - profile commit 0011
css changed

--- a/lawwa-web-revised/portfolio.html
+++ b/lawwa-web-revised/portfolio.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Phozogy, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Phozogy | Template</title>
+    <title>Lawwa.Asia</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap" rel="stylesheet">
@@ -27,48 +27,92 @@
     <!-- Page Preloder -->
     <div id="preloder">
         <div class="loader"></div>
-    </div>
-
-    <!-- Header Section Begin -->
-    <header class="header-section header-normal">
+      </div>
+  
+      <!-- Header Section Begin -->
+      <header class="header-section">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="logo">
-                        <a href="./index.html">
-                            <img src="img/logo.png" alt="">
-                        </a>
-                    </div>
-                    <nav class="nav-menu mobile-menu">
-                        <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about.html">About</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./pricing.html">Pricing</a></li>
-                            <li class="active"><a href="./portfolio.html">Portfolio</a></li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./portfolio-details.html">Portfolio Details</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                    <div class="top-search search-switch">
-                        <i class="fa fa-search"></i>
-                    </div>
-                    <div id="mobile-menu-wrap"></div>
+          <div class="row">
+              <div class="col-5 col-lg-4 col-sm-4 col-xl-3 col-md-4">
+                <div class="logo">
+                  <a href="./index.html">
+                    <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
+                    <img src="img/lawwa-img/lawwalogotransparent.png" alt="" width="100%" height="50px"/>
+                  </a>
                 </div>
+              </div>
+              <!-- <div class="col-2">
+                  <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
+                    <button class="cust-lawwa-ad-btn">
+                      <span>Register</span>
+                    </button>
+                  </a>
+              </div> -->
+              <div class="col-7 col-lg-8 col-md-7 col-xl-7 col-sm-8">
+              <nav class="nav-menu mobile-menu">
+                <ul>
+                  <li class="active"><a href="./index.html">Home</a></li>
+  
+                  <li><a href="./services.html">Products & Services</a>
+                    <ul class="dropdown">
+                        <li><a href="./facial.html">Facial</a></li>
+                        <li><a href="./makeup.html">Make Up</a></li>
+                        <li><a href="./massage.html">Massage</a></li>
+                        <li><a href="./confinement.html">Confinement</a></li>
+                        <li><a href="./treatment.html">Treatment</a></li>
+                        <li><a href="./addon.html">Add Ons</a></li>
+                    </ul>
+                </li>
+  
+                  <!-- <li><a href="./services.html">Products & Services</a></li> -->
+  
+                  <li><a href="./membership.html">Membership</a></li>
+                  <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
+                      <ul class="dropdown">
+                          <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a></li>
+                          <li><a lang="en" href="./recruitment.html">Recruitment</a><a lang="bm" href="./recruitment.html">rekruit</a></li>
+                          <li><a href="./courses.html">Courses</a></li>
+                      </ul>
+                  </li>
+                  <li><a href="./profile.html">Profile</a>
+                      <ul class="dropdown">
+                          <li><a href="./profile.html">Profile</a></li>
+                          <li><a href="./contact.html">Contact Us</a></li>
+                      </ul>
+                  </li>
+                  <li><a href="./gallery.html">Media</a>
+                      <ul class="dropdown">
+                          <li><a href="./gallery.html">Gallery</a></li>
+                          <li><a href="./events.html">Newsletter</a></li>
+                          <!-- <li><a href="./blog-details.html">Tips</a></li> -->
+                      </ul>
+                  </li>
+                  <!-- <li></li> -->
+                </ul>
+              </nav>
+              <div id="mobile-menu-wrap">
+              </div>
+              <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
+                <small>
+                  <img lang="en" class="switch-lang" src="img/lawwa-img/my.PNG">
+                  <img lang="bm" class="switch-lang" src="img/lawwa-img/uk.PNG">
+                </small>
+              </div>
             </div>
+            <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline">
+              <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
+                <button class="cust-lawwa-ad-btn btn-block">
+                  <span style="color: #FFF;">Register</span>
+                </button>
+              </a>
+          </div>
+          </div>
         </div>
-    </header>
-    <!-- Header End -->
+      </header>
+      <!-- Header End -->
 
     <!-- Breadcrumb Begin -->
-    <div class="breadcrumb-option spad">
+    <!-- <div class="breadcrumb-option spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -79,7 +123,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Breadcrumb End -->
 
     <!-- Portfolio Section Begin -->
