--- a/lawwa-web-revised/profile.html
+++ b/lawwa-web-revised/profile.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Lawwa Asia Official Website" />
-    <meta name="keywords" content="Lawwa, beauty" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8">
+    <meta name="description" content="Lawwa Asia Official Website">
+    <meta name="keywords" content="Lawwa, beauty">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lawwa.Asia</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/lawwa-img/favicon.ico" />
 
-    <!-- Google Font -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap"
-      rel="stylesheet"
-    />
+   <!-- Google Font -->
+   <link href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
@@ -46,7 +40,6 @@
               <div class="logo">
                 <a href="./index.html">
                   <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
-                  <!-- <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/> -->
                   <img src="img/lawwa-img/lawwalogotransparent.png" alt="" width="100%" height="50px"/>
                 </a>
               </div>
@@ -61,7 +54,7 @@
             <div class="col-7 col-lg-8 col-md-7 col-xl-7 col-sm-8">
             <nav class="nav-menu mobile-menu">
               <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li class="active"><a href="./index.html">Home</a></li>
 
                 <li><a href="./services.html">Products & Services</a>
                   <ul class="dropdown">
@@ -84,7 +77,7 @@
                         <li><a href="./courses.html">Courses</a></li>
                     </ul>
                 </li>
-                <li class="active"><a href="./profile.html">Profile</a>
+                <li><a href="./profile.html">Profile</a>
                     <ul class="dropdown">
                         <li><a href="./profile.html">Profile</a></li>
                         <li><a href="./contact.html">Contact Us</a></li>
@@ -122,32 +115,20 @@
     <!-- Header End -->
 
     <!-- Portfolio Hero Section Begin -->
-    <section class="portfolio-hero-section set-bg" data-setbg="img/lawwa-img/Profile/profilebanner.JPG" >
+    <section class="portfolio-hero-section set-bg" data-setbg="img/lawwa-img/Profile/profilebanner.JPG" 
+    style="display: block; height: 100%; max-height: 550px; margin-left: auto; margin-right: auto;">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="ph-text">
-                        <h1 style="color: #FFF;">Lawwa.Asia</h1>
-                    </div>
+              <div class="col-lg-12">
+                <div class="ph-text">
+                    <h2 style="color: #FFF;">Lawwa.Asia</h2>
                 </div>
+            </div>
             </div>
         </div>
     </section>
-    <br><br>
+    <br>
     <!-- Portfolio Hero Section End -->
-
-        <!-- Cta Section Begin -->
-        <!-- <section class="cta-section spad set-bg" data-setbg="img/lawwa-img/DSC08056.jpg" style="display: block; margin-left: auto; margin-right: auto; ">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="cta-text">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-        <!-- Cta Section End -->
 
     <section class="about section">
         <div class="container">
@@ -252,13 +233,13 @@
                         <img src="img/lawwa-img/DSC08050.jpg" alt="Img">
                     </div>
                 </div> -->
-                <div class="col-lg-5 col-10 col-md-10 col-sm-10 cust-vid-player set-bg" data-setbg="img/lawwa-img/Profile/ceo.JPG">
+                <div class="cust-vid-player set-bg" data-setbg="img/lawwa-img/Profile/ceo.JPG">
                   <a href="http://www.youtube.com/watch?v=tm3XKSYa9Gs" class="play-btn video-popup">
                     <i class="fa fa-play"></i>
                   </a>
                 </div>
 
-                <div class="col-md-7 col-sm-12">
+                <div class="">
                     <div class="block">
                         <div class="section-title">
                             <h3>From Our CEO</h3>
