--- a/lawwa-web-revised/events.html
+++ b/lawwa-web-revised/events.html
@@ -102,12 +102,12 @@
             </nav>
             <div id="mobile-menu-wrap">
             </div>
-            <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
+            <!-- <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
               <small>
                 <img lang="en" class="switch-lang" src="img/lawwa-img/my.PNG">
                 <img lang="bm" class="switch-lang" src="img/lawwa-img/uk.PNG">
               </small>
-            </div>
+            </div> -->
           </div>
           <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline">
             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
@@ -128,10 +128,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-9">
-                    <div class="blog-item">
-                        <!-- <div class="bi-pic">
+                    <!-- <div class="blog-item">
+                        <div class="bi-pic">
                             <img src="img/blog/blog-1.jpg" alt="">
-                        </div> -->
+                        </div>
                         <div class="bi-text">
                             <div class="label">Article Type eg Beauty Tip</div>
                             <h5><a href="./blog-details.html">Aritcle Title</a>
@@ -144,7 +144,7 @@
                                 ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
                                 viverra maecenas accumsan lacus vel facilisis. </p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="blog-item">
                         <!-- <div class="bi-pic">
                             <img src="img/blog/blog-2.jpg" alt="">
