--- a/lawwa-web-revised/profile.html
+++ b/lawwa-web-revised/profile.html
@@ -95,12 +95,12 @@
             </nav>
             <div id="mobile-menu-wrap">
             </div>
-            <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
+            <!-- <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
               <small>
                 <img lang="en" class="switch-lang" src="img/lawwa-img/my.PNG">
                 <img lang="bm" class="switch-lang" src="img/lawwa-img/uk.PNG">
               </small>
-            </div>
+            </div> -->
           </div>
           <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline">
             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
