--- a/lawwa-web-revised/tips.html
+++ b/lawwa-web-revised/tips.html
@@ -46,7 +46,7 @@
                 <a href="./index.html">
                   <!-- <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px" height="50px"/> -->
                   <!-- <img src="img/lawwa-img/Logo/LawwaLandscape.JPG" alt="" width="100%" height="50px"/> -->
-                  <img src="img/lawwa-img/lawwalogotrasnparent.png" alt="" width="100%" height="50px"/>
+                  <img src="img/lawwa-img/lawwalogotransparent.png" alt="" width="100%" height="50px"/>
                 </a>
               </div>
             </div>
@@ -88,12 +88,12 @@
             </nav>
             <div id="mobile-menu-wrap">
             </div>
-            <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
+            <!-- <div style="float: right; margin-top: 25px; max-height: 25px; max-width: 25px;">
               <small>
                 <img lang="en" class="switch-lang" src="img/lawwa-img/my.PNG">
                 <img lang="bm" class="switch-lang" src="img/lawwa-img/uk.PNG">
               </small>
-            </div>
+            </div> -->
           </div>
           <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline ">
             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
