--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -149,12 +149,12 @@
                             <img src="img/lawwa-img/Logo/instagram logo.png" />
                           </div>
                         </a>
-                        <a href="#">
+                        <!-- <a href="#">
                           <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/twitter logo.png" />
                           </div>
-                        </a>
-                        <a href="#">
+                        </a> -->
+                        <a href="mailto:sales@lawwa.asia?body=Hi Lawwa.Asia">sales@lawwa.asia</a>
                           <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/mail logo.png" />
                           </div>
